# roxy

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  config.yaml
benches/: proxy.rs
etc/docker/: Dockerfile
etc/helm/roxy/: Chart.yaml  values.yaml
etc/helm/roxy/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
src/: config.rs  errors.rs  http_client.rs  lib.rs  main.rs  metrics.rs  proxy.rs  shutdown.rs
