[package]
name = "roxy"
version = "0.1.5"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "http2"] }
hyper-tls = "0.6"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
prometheus = "0.13"
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["async_tokio", "html_reports"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[[bench]]
name = "proxy"
harness = false
